# LaserController

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LaserController.smproj  LaserController_zh_CN.ts  README.md  ReleaseNotes.md  ReleaseNotes.txt  cmake_install_debug.cmake  cmake_install_debug.txt  cmake_install_release.cmake  cmake_install_release.txt  cmake_install_relwithdebinfo.txt  config.json  export.json  matches.tiff  qt.conf  test.txt  text01.json  untitled.json
cmake/: Compress.cmake  Compress_debug.cmake  FindFLANN.cmake  FindPolyClipping.cmake  GenerateConstraints.cmake  compress.cmake
docs/: 001.config  20210622问题单.md  ComPort库接口.txt  MainFormUtils.pas  Sure Cuts A Lot 4 Help.chm  ceshi1.ai  chboard.psd  chessboard.psd  delphi源码地址推导.xlsx  messages_and_errors.xlsx  states.xlsx  上位机软件优化建议.docx  上位机软件菜单修改.docx  二维矩阵基础知识.tex  处理流程.md  寄存器列表.xlsx  小圆填充.json  注册流程.xlsx  相对坐标矩形.json  网格旋转.xlsx  钥匙扣dxf圆角.dxf
docs/firmware/: AT_Laser-bootloader.hex  AT_Laser210913.hex  AT_Laser210918-2.hex  AT_Laser210919-2.hex
docs/manual/: JSON中新添加的属性.docx  errors.md  激活板卡UI反馈处理.txt
docs/testing/: T000025_1印章相关加工.xlsx  T000025刻章加工测试.xlsx  TestCaseTemplate.xlsx
res/: constraints.csv  constraints.xlsx
res/icons/: Settings.psd  app_icon.psd  camera_lens.psd  close_document.psd  copy.psd  cut.psd  cut_edge.psd  delete.psd  ellipse.psd  export_json.psd  image.psd  import_cdr.psd  import_document.psd  import_svg.psd  line.psd  machining.psd  new_document.psd  open_document.psd  paste.psd  path_opt.psd  pause.psd  polygon.psd  rectangle.psd  reset.psd  reset_origin.psd  save_document.psd  settings_device.psd  start.psd  start_stamp.psd  stop.psd  text.psd  two_shapes.psd  u_backward.psd  u_forward.psd  u_origin.psd  z_origin.psd
res/southAfrica/: Untitled-1.ai
src/: LaserApplication.cpp  LaserApplication.h  main.cpp  version.h
src/algorithm/: OptimizeEdge.cpp  OptimizeEdge.h  OptimizeNode.cpp  OptimizeNode.h  PathOptimizer.cpp  PathOptimizer.h  QBezier.cpp  QBezier.h  QBezierF.cpp  QBezierF.h  QuadTreeNode.cpp  QuadTreeNode.h
src/camera/: CameraController.cpp  CameraController.h  CharucoCalibrator.h  DistortionCalibrator.cpp  DistortionCalibrator.h  ImageProcessor.cpp  ImageProcessor.h  VideoFrameGrabber.cpp  VideoFrameGrabber.h
src/common/: Config.cpp  Config.h  ConfigItem.cpp  ConfigItem.h  ConfigItemGroup.cpp  ConfigItemGroup.h  common.cpp  common.h
src/comport/: ComPort.cpp  ComPort.h  ComPortController.cpp  ComPortController.h  ComPortExport.h
src/dlltest/: DllTest.cpp  DllTest.h  DllTestExport.h
src/exception/: LaserException.cpp  LaserException.h
src/halftone/: Ostromoukhov.cpp  Ostromoukhov.h  SAHalftoner.cpp  SAHalftoner.h  SSIM.cpp  SSIM.h
src/import/: CorelDrawImporter.cpp  CorelDrawImporter.h  DxfImporter.cpp  DxfImporter.h  DxfNode.cpp  DxfNode.h  Importer.cpp  Importer.h  SvgImporter.cpp  SvgImporter.h
src/laser/: LaserDefines.h  LaserDevice.cpp  LaserDevice.h  LaserDriver.cpp  LaserDriver.h  LaserEvent.cpp  LaserEvent.h  LaserLineList.cpp  LaserLineList.h  LaserPoint.cpp  LaserPoint.h  LaserPointList.cpp  LaserPointList.h  LaserRegister.cpp  LaserRegister.h  Task.cpp  Task.h
src/primitive/: LaserBitmap.cpp  LaserBitmap.h  LaserCircleText.cpp  LaserCircleText.h  LaserEllipse.cpp  LaserEllipse.h  LaserFrame.cpp  LaserFrame.h  LaserHorizontalText.cpp  LaserHorizontalText.h  LaserLine.cpp  LaserLine.h  LaserNurbs.cpp  LaserNurbs.h  LaserPartyEmlem.cpp  LaserPartyEmlem.h  LaserPath.cpp  LaserPath.h  LaserPolyLine.cpp  LaserPolyLine.h  LaserPolygon.cpp  LaserPolygon.h  LaserPrimitive.cpp  LaserPrimitive.h  LaserPrimitiveDeclaration.h  LaserPrimitiveGroup.cpp  LaserPrimitiveGroup.h  LaserPrimitiveHeaders.h  LaserPrimitivePrivate.cpp  LaserPrimitivePrivate.h  LaserRect.cpp  LaserRect.h  LaserRing.cpp  LaserRing.h  LaserShape.h  LaserShapePrivate.h  LaserStampBase.cpp  LaserStampBase.h  LaserStampBasePrivate.h  LaserStampBitmap.cpp  (+12 more)
src/res/: icons.qrc  laser.aps  laser.rc
src/scene/: LaserBackgroundItem.cpp  LaserBackgroundItem.h  LaserDocument.cpp  LaserDocument.h  LaserDocumentItem.cpp  LaserDocumentItem.h  LaserItem.cpp  LaserItem.h  LaserLayer.cpp  LaserLayer.h  LaserNode.cpp  LaserNode.h  LaserNodePrivate.h  LaserPrimitive.cpp  LaserPrimitive.h  LaserPrimitiveElement.cpp  LaserPrimitiveElement.h  LaserPrimitiveGroup.cpp  LaserPrimitiveGroup.h  LaserPrimitiveGroup2.h  LaserScene.cpp  LaserScene.h  PageInformation.cpp  PageInformation.h  PageSize.cpp  PageSize.h  Ruller.cpp  Ruller.h  SmallDiagonalLimitation.cpp  SmallDiagonalLimitation.h
src/state/: StateController.cpp  StateController.h
src/svg/: qcssparser.cpp  qcssparser.h  qgraphicssvgitem.cpp  qgraphicssvgitem.h  qsvgfont.cpp  qsvgfont.h  qsvggenerator.cpp  qsvggenerator.h  qsvggraphics.cpp  qsvggraphics.h  qsvghandler.cpp  qsvghandler.h  qsvgnode.cpp  qsvgnode.h  qsvgrenderer.cpp  qsvgrenderer.h  qsvgstructure.cpp  qsvgstructure.h  qsvgstyle.cpp  qsvgstyle.h  qsvgtinydocument.cpp  qsvgtinydocument.h  qtsvgglobal.h  svgview.cpp  svgview.h
src/task/: ConnectionTask.cpp  ConnectionTask.h  DisconnectionTask.cpp  DisconnectionTask.h  DriverTask.h  MachiningTask.cpp  MachiningTask.h  ProgressItem.cpp  ProgressItem.h  ProgressItemManager.cpp  ProgressItemManager.h  ProgressModel.cpp  ProgressModel.h  Task.cpp  Task.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ActivationDialog.cpp  ActivationDialog.h  ActivationDialog.ui  CalibrationDialog.h  (+91 more)
test/: CMakeLists.txt  TestBoostGeometry.cpp  TestDriver.cpp  TestException.cpp  TestGeometry.cpp  TestImageUtils.cpp  TestImageUtils.h  TestLaserDocument.cpp  TestLaserDocument.h  TestLaserDriver.cpp  TestLaserDriver.h  TestOpenCVFlann.cpp  TestQPainterPath.cpp  TestQPainterPath.h  TestQt2Wykobi.cpp  TestQtClosestPoint.cpp  TestStateController.cpp  TestStateController.h  TestWykobi.cpp  main.cpp
test/DelphiLibraryTest/: externallibrary.cpp  externallibrary.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: CNELaser_en.ts  CNELaser_en_US.ts  CNELaser_ru_RU.ts  CNELaser_zh_CN.ts  LaserController_zh_CN.ts  zh_CN.qph
(+170 files in other folders)
